--- a/styles/sass/_blog.scss
+++ b/styles/sass/_blog.scss
@@ -14,52 +14,131 @@
         position: absolute;
         font-family: $header-font;
         color: $white;
-        font-size: 5rem;
+        font-size: 4rem;
         text-transform: uppercase;
+        padding-bottom: -2rem;
+        top: 245px;
+        left: 440px;
     }
 }
 
-.main-aside-container {
+img {
+    max-width: 100%;
+}
+
+.blog-wrapper {
     background-color: $dark-blue;
-    color: $white;
+}
+
+.main-aside-container {
     display: flex;
     flex-direction: row-reverse;
-    justify-content: space-between;
-    align-items: flex-start;
+    justify-content: space-around;
+    position: relative;
+    background-color: $dark-blue;
+    color: $white;
 }
 
 .blog-main-img {
     box-shadow: -30px 30px 0 0 $light-blue;
-    margin: -10rem 0 0 1.5rem;
+    // margin: -12.7rem 0 0 1.5rem;
+    position: absolute;
     z-index: 1;
+    width: 836px;
+    top: -255px;
+    left: 444px;
 }
 
 .blog-main {
     display: flex;
     flex-direction: column;
+    width: 60%;
+    margin-left: 6rem;
     .blog-main-content {
         border-left: 5px solid $light-blue;
-        .content {
+        margin-top: 16.5rem;
+        padding-left: 2rem;
+        border-bottom: 5px solid $light-blue;
+        h2 {
+            font-family: $header-font;
+            text-transform: uppercase;
+            font-size: 1.5rem;
+            letter-spacing: .1rem;
+            padding: 1.5rem 0 .5rem;
+        }
+        .date {
+            font-family: $body-font;
             font-size: .8rem;
-            width: 500px;
-            padding: 1rem .5rem;
-            border-bottom: 5px solid $light-blue;
+        }
+        .content {
+            font-family: $body-font;
+            font-size: .8rem;
+            // width: 500px;
+            padding: 1rem 0;
+            line-height: 1.1rem;
+        }
+    }
+}
+
+.comments {
+    display: flex;
+    padding: 1.5rem;
+    h3 {
+        font-family: $header-font;
+        text-transform: uppercase;
+        padding-bottom: 2.5rem;
+    }
+}
+
+.comment {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+        img {
+            padding-right: 1rem;
+            width: 300px;
+        }
+//     .comment-img {
+//         width: 300px;
+//         img {
+//             display: flex;
+//             // width: 600px;
+//             width: auto%;
+//             margin: 2rem 2rem 2rem 0;
+//         }
+//     }
+    .comment-content {
+        display: flex;
+        flex-direction: column;
+        font-family: $body-font;
+        font-size: .8rem;
+        // padding-left: 2rem;
+        line-height: 1.1rem;
+        margin-bottom: 2.5rem;
+        .date {
+            padding-bottom: .5rem;
         }
     }
 }
 
 .blog-aside {
-    display: flex;
-    flex-direction: column;
+    // display: flex;
+    // flex-direction: column;
+    // position: relative;
     .blog-side-img-container {
-        img {
         z-index: 1;
-        }
+        // box-shadow: 30px 0 0 $green;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 335px
     }
     .aside-content {
+        position: absolute;
         background-color: $green;
         width: 250px;
-        padding-top: 15rem;
+        padding: 14rem 1rem 1rem .5rem;
+        margin-top: 1rem;
     }
 }
 
@@ -68,7 +147,7 @@
         font-family: $header-font;
         text-transform: uppercase;
         font-size: 1rem;
-        padding-bottom: 1rem;
+        padding-bottom: .5rem;
     }
     p {
         font-family: $body-font;
@@ -82,7 +161,7 @@
         font-family: $header-font;
         text-transform: uppercase;
         font-size: 1rem;
-        padding-bottom: 1rem;
+        padding-bottom: .5rem;
     }
     ul {
         list-style-type: disc;
@@ -90,4 +169,79 @@
         font-size: .8rem;
         margin-left: 1rem;
     }
+}
+
+// NOTE: SOME AREAS ARE COMMENTED OUT - THEY ARE OLD ATTEMPTS I SAVED TO TRY OTHER THINGS BEFORE I FOUND THE SOLUTION.
+
+.form-user-info {
+    display: flex;
+    flex-direction: space-between;
+    text-align: center;
+    // flex: 0 0 auto; ATTEMPTED TO CREATE SPACING BETWEEN ELEMENTS.
+    border: none;
+    .name {
+        display: flex;
+        width: 49%;
+        margin-right: -1px;
+        background-color: $dark-blue;
+        color: $white;
+        border: none;
+        border-bottom: 2px solid $light-blue;
+    }
+    .email {
+        display: flex;
+        width: 49%;
+        background-color: $dark-blue;
+        color: $white;
+        border: none;
+        border-bottom: 2px solid $light-blue;
+    }
+}
+
+.name::placeholder {
+    color: $white;
+    opacity: 1;
+}
+
+.email::placeholder {
+    color: $white;
+    opacity: 1;
+}
+
+.form-function {
+    display: flex;
+    flex-direction: column;
+
+    .comment-textbox {
+        display: block;
+        margin-top: 1rem;
+        width: 100%;
+        height: 300px;
+        background-color: $dark-blue;
+        color: $white;
+        border: 2px solid $light-blue;
+    }
+    .post-comment {
+        width: 100%;
+        border: none;
+        margin: 2rem 0;
+        padding: .5rem;
+        background-color: $green;
+        color: $white;
+        text-transform: uppercase;
+        font-family: $header-font;
+        font-size: 1rem;
+        letter-spacing: .1rem;
+    }
+}
+
+.comment-textbox::placeholder {
+        color: $white;
+        opacity: 1;
+}
+
+.post-comment::placeholder {
+    color: $white;
+    opacity: 1;
+
 }
