--- a/styles/style.css
+++ b/styles/style.css
@@ -911,13 +911,22 @@ img {
   position: absolute;
   font-family: "Barlow", sans-serif;
   color: #ffffff;
-  font-size: 5rem;
+  font-size: 4rem;
   text-transform: uppercase;
+  padding-bottom: -2rem;
+  top: 245px;
+  left: 440px;
+}
+
+img {
+  max-width: 100%;
+}
+
+.blog-wrapper {
+  background-color: #0c1423;
 }
 
 .main-aside-container {
-  background-color: #0c1423;
-  color: #ffffff;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -925,19 +934,21 @@ img {
   -webkit-box-direction: reverse;
       -ms-flex-direction: row-reverse;
           flex-direction: row-reverse;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  position: relative;
+  background-color: #0c1423;
+  color: #ffffff;
 }
 
 .blog-main-img {
   -webkit-box-shadow: -30px 30px 0 0 #86e0f9;
           box-shadow: -30px 30px 0 0 #86e0f9;
-  margin: -10rem 0 0 1.5rem;
+  position: absolute;
   z-index: 1;
+  width: 836px;
+  top: -255px;
+  left: 444px;
 }
 
 .blog-main {
@@ -948,20 +959,68 @@ img {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  width: 60%;
+  margin-left: 6rem;
 }
 
 .blog-main .blog-main-content {
   border-left: 5px solid #86e0f9;
-}
-
-.blog-main .blog-main-content .content {
-  font-size: .8rem;
-  width: 500px;
-  padding: 1rem .5rem;
+  margin-top: 16.5rem;
+  padding-left: 2rem;
   border-bottom: 5px solid #86e0f9;
 }
 
-.blog-aside {
+.blog-main .blog-main-content h2 {
+  font-family: "Barlow", sans-serif;
+  text-transform: uppercase;
+  font-size: 1.5rem;
+  letter-spacing: .1rem;
+  padding: 1.5rem 0 .5rem;
+}
+
+.blog-main .blog-main-content .date {
+  font-family: "Lato", sans-serif;
+  font-size: .8rem;
+}
+
+.blog-main .blog-main-content .content {
+  font-family: "Lato", sans-serif;
+  font-size: .8rem;
+  padding: 1rem 0;
+  line-height: 1.1rem;
+}
+
+.comments {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 1.5rem;
+}
+
+.comments h3 {
+  font-family: "Barlow", sans-serif;
+  text-transform: uppercase;
+  padding-bottom: 2.5rem;
+}
+
+.comment {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.comment img {
+  padding-right: 1rem;
+  width: 300px;
+}
+
+.comment .comment-content {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -969,23 +1028,37 @@ img {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  font-family: "Lato", sans-serif;
+  font-size: .8rem;
+  line-height: 1.1rem;
+  margin-bottom: 2.5rem;
 }
 
-.blog-aside .blog-side-img-container img {
+.comment .comment-content .date {
+  padding-bottom: .5rem;
+}
+
+.blog-aside .blog-side-img-container {
   z-index: 1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 335px;
 }
 
 .blog-aside .aside-content {
+  position: absolute;
   background-color: #0f614e;
   width: 250px;
-  padding-top: 15rem;
+  padding: 14rem 1rem 1rem .5rem;
+  margin-top: 1rem;
 }
 
 .aside-about h4 {
   font-family: "Barlow", sans-serif;
   text-transform: uppercase;
   font-size: 1rem;
-  padding-bottom: 1rem;
+  padding-bottom: .5rem;
 }
 
 .aside-about p {
@@ -998,7 +1071,7 @@ img {
   font-family: "Barlow", sans-serif;
   text-transform: uppercase;
   font-size: 1rem;
-  padding-bottom: 1rem;
+  padding-bottom: .5rem;
 }
 
 .recent-posts ul {
@@ -1006,6 +1079,154 @@ img {
   font-family: "Lato", sans-serif;
   font-size: .8rem;
   margin-left: 1rem;
+}
+
+.form-user-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: space-between;
+          flex-direction: space-between;
+  text-align: center;
+  border: none;
+}
+
+.form-user-info .name {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 49%;
+  margin-right: -1px;
+  background-color: #0c1423;
+  color: #ffffff;
+  border: none;
+  border-bottom: 2px solid #86e0f9;
+}
+
+.form-user-info .email {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 49%;
+  background-color: #0c1423;
+  color: #ffffff;
+  border: none;
+  border-bottom: 2px solid #86e0f9;
+}
+
+.name::-webkit-input-placeholder {
+  color: #ffffff;
+  opacity: 1;
+}
+
+.name:-ms-input-placeholder {
+  color: #ffffff;
+  opacity: 1;
+}
+
+.name::-ms-input-placeholder {
+  color: #ffffff;
+  opacity: 1;
+}
+
+.name::placeholder {
+  color: #ffffff;
+  opacity: 1;
+}
+
+.email::-webkit-input-placeholder {
+  color: #ffffff;
+  opacity: 1;
+}
+
+.email:-ms-input-placeholder {
+  color: #ffffff;
+  opacity: 1;
+}
+
+.email::-ms-input-placeholder {
+  color: #ffffff;
+  opacity: 1;
+}
+
+.email::placeholder {
+  color: #ffffff;
+  opacity: 1;
+}
+
+.form-function {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.form-function .comment-textbox {
+  display: block;
+  margin-top: 1rem;
+  width: 100%;
+  height: 300px;
+  background-color: #0c1423;
+  color: #ffffff;
+  border: 2px solid #86e0f9;
+}
+
+.form-function .post-comment {
+  width: 100%;
+  border: none;
+  margin: 2rem 0;
+  padding: .5rem;
+  background-color: #0f614e;
+  color: #ffffff;
+  text-transform: uppercase;
+  font-family: "Barlow", sans-serif;
+  font-size: 1rem;
+  letter-spacing: .1rem;
+}
+
+.comment-textbox::-webkit-input-placeholder {
+  color: #ffffff;
+  opacity: 1;
+}
+
+.comment-textbox:-ms-input-placeholder {
+  color: #ffffff;
+  opacity: 1;
+}
+
+.comment-textbox::-ms-input-placeholder {
+  color: #ffffff;
+  opacity: 1;
+}
+
+.comment-textbox::placeholder {
+  color: #ffffff;
+  opacity: 1;
+}
+
+.post-comment::-webkit-input-placeholder {
+  color: #ffffff;
+  opacity: 1;
+}
+
+.post-comment:-ms-input-placeholder {
+  color: #ffffff;
+  opacity: 1;
+}
+
+.post-comment::-ms-input-placeholder {
+  color: #ffffff;
+  opacity: 1;
+}
+
+.post-comment::placeholder {
+  color: #ffffff;
+  opacity: 1;
 }
 
 html,
